PUTIN/gen/PUTINParser.java
// Generated from C:/Users/Søren/Desktop/Putin2/BaseGen/PUTIN\PUTIN.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PUTINParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, DOUBLE=35, TYPE_NUMBER=36, TYPE_TEXT=37, 
		TYPE_BOOLEAN=38, TYPE_PLAYER=39, TYPE_PIECE=40, TYPE_LIST=41, TYPE_COORDINATE=42, 
		OP_AND=43, OP_OR=44, OP_EQUALS=45, OP_NOTEQUALS=46, OP_LESSTHAN=47, OP_LARGERTHAN=48, 
		OP_EQUALORLESSTHAN=49, OP_EQUALORLARGERTHAN=50, OP_MULTIPLY=51, OP_DIVIDE=52, 
		OP_MOD=53, OP_PLUS=54, OP_MINUS=55, OP_NOT=56, DIRECTION=57, TEXT=58, 
		BOOL=59, INT=60, ID=61, WS=62, COMMENT_MUlT=63, COMMENT=64;
	public static final int
		RULE_program = 0, RULE_board = 1, RULE_pieces = 2, RULE_setup = 3, RULE_rules = 4, 
		RULE_wincondition = 5, RULE_method = 6, RULE_size = 7, RULE_boardparam = 8, 
		RULE_stmt = 9, RULE_players = 10, RULE_turn = 11, RULE_turndistribution = 12, 
		RULE_wincnd = 13, RULE_type = 14, RULE_nextm = 15, RULE_nextnextm = 16, 
		RULE_height = 17, RULE_width = 18, RULE_illigaltiles = 19, RULE_specialtiles = 20, 
		RULE_assignmentstmt = 21, RULE_ifstmt = 22, RULE_repeatwhilestmt = 23, 
		RULE_repeatstmt = 24, RULE_optionsstmt = 25, RULE_returnstmt = 26, RULE_foreachstmt = 27, 
		RULE_methodcall = 28, RULE_players1 = 29, RULE_players2 = 30, RULE_piecetype = 31, 
		RULE_expression = 32, RULE_r = 33, RULE_relation = 34, RULE_a = 35, RULE_add = 36, 
		RULE_m = 37, RULE_mult = 38, RULE_u = 39, RULE_unary = 40, RULE_n = 41, 
		RULE_negation = 42, RULE_t = 43, RULE_term = 44, RULE_elsif = 45, RULE_els = 46, 
		RULE_option = 47, RULE_def = 48, RULE_assignmentstmt1 = 49, RULE_assignmentstmt2 = 50, 
		RULE_assignmentstmt3 = 51, RULE_mc = 52, RULE_mc1 = 53, RULE_mc2 = 54, 
		RULE_coordinate = 55, RULE_value = 56, RULE_singlemove = 57, RULE_number = 58, 
		RULE_stmtmethod = 59, RULE_list = 60, RULE_stmtm = 61, RULE_stmtm1 = 62, 
		RULE_stmtm2 = 63;
	public static final String[] ruleNames = {
		"program", "board", "pieces", "setup", "rules", "wincondition", "method", 
		"size", "boardparam", "stmt", "players", "turn", "turndistribution", "wincnd", 
		"type", "nextm", "nextnextm", "height", "width", "illigaltiles", "specialtiles", 
		"assignmentstmt", "ifstmt", "repeatwhilestmt", "repeatstmt", "optionsstmt", 
		"returnstmt", "foreachstmt", "methodcall", "players1", "players2", "piecetype", 
		"expression", "r", "relation", "a", "add", "m", "mult", "u", "unary", 
		"n", "negation", "t", "term", "elsif", "els", "option", "def", "assignmentstmt1", 
		"assignmentstmt2", "assignmentstmt3", "mc", "mc1", "mc2", "coordinate", 
		"value", "singlemove", "number", "stmtmethod", "list", "stmtm", "stmtm1", 
		"stmtm2"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'Board'", "'['", "']'", "'Pieces'", "'Setup'", "'Rules'", "'WinConditions'", 
		"'('", "','", "')'", "'{'", "'}'", "'Turn'", "'TurnDistribution'", "'Height'", 
		"'='", "';'", "'Width'", "'IllegalTiles'", "'SpecialTiles'", "'If'", "'RepeatWhile'", 
		"'Repeat'", "'Options'", "'Return'", "'ForEach'", "'In'", "'Players'", 
		"'ElseIf'", "'Else'", "'Option'", "':'", "'Default'", "'.'", null, "'Number'", 
		"'Text'", "'Boolean'", "'Player'", "'Piece'", "'List'", "'Coordinate'", 
		"'And'", "'Or'", "'Equals'", "'NotEquals'", "'LessThan'", "'LargerThan'", 
		"'EqualOrLessThan'", "'EqualOrLargerThan'", "'*'", "'/'", null, "'+'", 
		"'-'", "'!'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "DOUBLE", 
		"TYPE_NUMBER", "TYPE_TEXT", "TYPE_BOOLEAN", "TYPE_PLAYER", "TYPE_PIECE", 
		"TYPE_LIST", "TYPE_COORDINATE", "OP_AND", "OP_OR", "OP_EQUALS", "OP_NOTEQUALS", 
		"OP_LESSTHAN", "OP_LARGERTHAN", "OP_EQUALORLESSTHAN", "OP_EQUALORLARGERTHAN", 
		"OP_MULTIPLY", "OP_DIVIDE", "OP_MOD", "OP_PLUS", "OP_MINUS", "OP_NOT", 
		"DIRECTION", "TEXT", "BOOL", "INT", "ID", "WS", "COMMENT_MUlT", "COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PUTIN.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PUTINParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public BoardContext board() {
			return getRuleContext(BoardContext.class,0);
		}
		public PiecesContext pieces() {
			return getRuleContext(PiecesContext.class,0);
		}
		public SetupContext setup() {
			return getRuleContext(SetupContext.class,0);
		}
		public RulesContext rules() {
			return getRuleContext(RulesContext.class,0);
		}
		public WinconditionContext wincondition() {
			return getRuleContext(WinconditionContext.class,0);
		}
		public List<MethodContext> method() {
			return getRuleContexts(MethodContext.class);
		}
		public MethodContext method(int i) {
			return getRuleContext(MethodContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PUTINVisitor ) return ((PUTINVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			board();
			setState(129);
			pieces();
			setState(130);
			setup();
			setState(131);
			rules();
			setState(132);
			wincondition();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_NUMBER) | (1L << TYPE_TEXT) | (1L << TYPE_BOOLEAN) | (1L << TYPE_PLAYER) | (1L << TYPE_PIECE) | (1L << TYPE_LIST) | (1L << TYPE_COORDINATE) | (1L << ID))) != 0)) {
				{
				{
				setState(133);
				method();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoardContext extends ParserRuleContext {
		public SizeContext size() {
			return getRuleContext(SizeContext.class,0);
		}
		public List<BoardparamContext> boardparam() {
			return getRuleContexts(BoardparamContext.class);
		}
		public BoardparamContext boardparam(int i) {
			return getRuleContext(BoardparamContext.class,i);
		}
		public BoardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_board; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).enterBoard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).exitBoard(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PUTINVisitor ) return ((PUTINVisitor<? extends T>)visitor).visitBoard(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoardContext board() throws RecognitionException {
		BoardContext _localctx = new BoardContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_board);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(T__0);
			setState(140);
			match(T__1);
			setState(141);
			size();
			setState(145);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18 || _la==T__19) {
				{
				{
				setState(142);
				boardparam();
				}
				}
				setState(147);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(148);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PiecesContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public PiecesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pieces; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).enterPieces(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).exitPieces(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PUTINVisitor ) return ((PUTINVisitor<? extends T>)visitor).visitPieces(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PiecesContext pieces() throws RecognitionException {
		PiecesContext _localctx = new PiecesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pieces);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(T__3);
			setState(151);
			match(T__1);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__25) | (1L << TYPE_NUMBER) | (1L << TYPE_TEXT) | (1L << TYPE_BOOLEAN) | (1L << TYPE_PLAYER) | (1L << TYPE_PIECE) | (1L << TYPE_LIST) | (1L << TYPE_COORDINATE) | (1L << ID))) != 0)) {
				{
				{
				setState(152);
				stmt();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(158);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SetupContext extends ParserRuleContext {
		public PlayersContext players() {
			return getRuleContext(PlayersContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public SetupContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setup; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).enterSetup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).exitSetup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PUTINVisitor ) return ((PUTINVisitor<? extends T>)visitor).visitSetup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SetupContext setup() throws RecognitionException {
		SetupContext _localctx = new SetupContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_setup);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(T__4);
			setState(161);
			match(T__1);
			setState(162);
			players();
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__25) | (1L << TYPE_NUMBER) | (1L << TYPE_TEXT) | (1L << TYPE_BOOLEAN) | (1L << TYPE_PLAYER) | (1L << TYPE_PIECE) | (1L << TYPE_LIST) | (1L << TYPE_COORDINATE) | (1L << ID))) != 0)) {
				{
				{
				setState(163);
				stmt();
				}
				}
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(169);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RulesContext extends ParserRuleContext {
		public TurndistributionContext turndistribution() {
			return getRuleContext(TurndistributionContext.class,0);
		}
		public List<TurnContext> turn() {
			return getRuleContexts(TurnContext.class);
		}
		public TurnContext turn(int i) {
			return getRuleContext(TurnContext.class,i);
		}
		public RulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).enterRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).exitRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PUTINVisitor ) return ((PUTINVisitor<? extends T>)visitor).visitRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RulesContext rules() throws RecognitionException {
		RulesContext _localctx = new RulesContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_rules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(T__5);
			setState(172);
			match(T__1);
			setState(174); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(173);
				turn();
				}
				}
				setState(176); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__12 );
			setState(178);
			turndistribution();
			setState(179);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WinconditionContext extends ParserRuleContext {
		public List<WincndContext> wincnd() {
			return getRuleContexts(WincndContext.class);
		}
		public WincndContext wincnd(int i) {
			return getRuleContext(WincndContext.class,i);
		}
		public WinconditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_wincondition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).enterWincondition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).exitWincondition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PUTINVisitor ) return ((PUTINVisitor<? extends T>)visitor).visitWincondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WinconditionContext wincondition() throws RecognitionException {
		WinconditionContext _localctx = new WinconditionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_wincondition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			match(T__6);
			setState(182);
			match(T__1);
			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__20 || _la==T__23) {
				{
				{
				setState(183);
				wincnd();
				}
				}
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(189);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PUTINParser.ID, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public NextmContext nextm() {
			return getRuleContext(NextmContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public ReturnstmtContext returnstmt() {
			return getRuleContext(ReturnstmtContext.class,0);
		}
		public List<NextnextmContext> nextnextm() {
			return getRuleContexts(NextnextmContext.class);
		}
		public NextnextmContext nextnextm(int i) {
			return getRuleContext(NextnextmContext.class,i);
		}
		public MethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).enterMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).exitMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PUTINVisitor ) return ((PUTINVisitor<? extends T>)visitor).visitMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodContext method() throws RecognitionException {
		MethodContext _localctx = new MethodContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_method);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_NUMBER) | (1L << TYPE_TEXT) | (1L << TYPE_BOOLEAN) | (1L << TYPE_PLAYER) | (1L << TYPE_PIECE) | (1L << TYPE_LIST) | (1L << TYPE_COORDINATE))) != 0)) {
				{
				setState(191);
				type();
				}
			}

			setState(194);
			match(ID);
			setState(195);
			match(T__7);
			setState(204);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_NUMBER) | (1L << TYPE_TEXT) | (1L << TYPE_BOOLEAN) | (1L << TYPE_PLAYER) | (1L << TYPE_PIECE) | (1L << TYPE_LIST) | (1L << TYPE_COORDINATE))) != 0)) {
				{
				setState(196);
				nextm();
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(197);
					match(T__8);
					setState(198);
					nextnextm();
					}
					}
					setState(203);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(206);
			match(T__9);
			setState(207);
			match(T__10);
			setState(211);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__25) | (1L << TYPE_NUMBER) | (1L << TYPE_TEXT) | (1L << TYPE_BOOLEAN) | (1L << TYPE_PLAYER) | (1L << TYPE_PIECE) | (1L << TYPE_LIST) | (1L << TYPE_COORDINATE) | (1L << ID))) != 0)) {
				{
				{
				setState(208);
				stmt();
				}
				}
				setState(213);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(215);
			_la = _input.LA(1);
			if (_la==T__24) {
				{
				setState(214);
				returnstmt();
				}
			}

			setState(217);
			match(T__11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SizeContext extends ParserRuleContext {
		public HeightContext height() {
			return getRuleContext(HeightContext.class,0);
		}
		public WidthContext width() {
			return getRuleContext(WidthContext.class,0);
		}
		public SizeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_size; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).enterSize(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).exitSize(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PUTINVisitor ) return ((PUTINVisitor<? extends T>)visitor).visitSize(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SizeContext size() throws RecognitionException {
		SizeContext _localctx = new SizeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_size);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(219);
			height();
			setState(220);
			width();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoardparamContext extends ParserRuleContext {
		public IlligaltilesContext illigaltiles() {
			return getRuleContext(IlligaltilesContext.class,0);
		}
		public SpecialtilesContext specialtiles() {
			return getRuleContext(SpecialtilesContext.class,0);
		}
		public BoardparamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boardparam; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).enterBoardparam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PUTINListener ) ((PUTINListener)listener).exitBoardparam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PUTINVisitor ) return ((PUTINVisitor<? extends T>)visitor).visitBoardparam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoardparamContext boardparam() throws RecognitionException {
		BoardparamContext _localctx = new BoardparamContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_boardparam);
		try {
			setState(224);
			switch (_input.LA(1)) {
			case T__18:
				enterOuterAlt(_localctx, 1);
				{
				setState(222);
				illigaltiles();
				}
				break;
			case T__19:
				enterOuterAlt(_localctx, 2);
				{
				setState(223);
				specialtiles();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
